Import with new taxonomic walking and nested set index creation working